# dunedaq_conf_reader

./: .gitignore  requirements.txt  setup.cfg  setup.py
docs/: README.md
src/dunedaq_conf_reader/: __main__.py  __main_download_conf__.py  dunedaq_conf_data_extractor.py  oks_utils.py
src/dunedaq_conf_reader/test/: conftest.py  fixtures.py  test-config.data.json  test-config.data.xml  test_ehn1_conf.py  test_oks_utils.py
src/offline_conf_reader/: __main__.py  dunedaq_conf_data_extractor.py  oks_data_extractor.py  oks_utils.py
src/offline_conf_reader/test/: consolidated_example-config.data.xml  fixtures.py  test-config.data.xml  test_extract_data.py  test_oks_utils.py
