[metadata]
name = offline_conf_reader
version = attr: offline_conf_reader.__version__
url = https://github.com/plasorak/offline_conf_reader
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
include_package_data = true
